--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "lodash.debounce": "^4.0.8",
-    "vue": "^2.6.10",
-    "vuex": "^3.1.0"
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
