fixed package.json main missing

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "description": "A customizable table component in vue. Intended to be used as a web-component.",
   "repository": "github:protronic/prot-table",
+  "main": "dist/web-component/prot-table.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --mode production --dest dist/web-component --target wc --name prot-table && cp public/web-component.html dist/index.html && cp public/data.json dist/data.json",
